--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-SENDGRID_API_KEY =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
+SENDGRID_API_KEY ='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'
 
-
-SECRET_KEY = django-insecure-8j#u^4f1$b51y&=)$z5!(ml=_&ahi9y&37t6!6-kg=01iakxjj
 
