--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,36 @@
-version: '3.8'
+version: "3.9"
 services:
-    django:
-        build: . #use the initial python image
-        container_name: django
-        command: python manage.py runserver 0.0.0.0:8000
-        ports:
-            - 8000:8000
-        depends_on:
-            - pgdb  #postgresql database
-    pgdb:
+      #postgresql database
+    db:
         image: postgres 
-        container_name: pgdb
+        container_name: db
         command: python manage.py runserver 0.0.0.0:8000
         volumes:
-            - postgres-data:/var/lib/postgresql/data
+            - ./data/db:/var/lib/postgresql/data
         ports:
             - 5432:5432    
         environment:
             - POSTGRES_DB= test
             - POSTGRES_USER= postgres
-            - POSTGRES_PASSWORD= WarMachine007      
-volumes:
-    postrgres-data:
+            - POSTGRES_PASSWORD= WarMachine007 
+    django:
+        build: . 
+        container_name: django
+        command: python manage.py runserver 0.0.0.0:8000 #localhost for the image 
+        volumes:
+            - .:/code
+        ports:
+            - 8000:8000
+        depends_on:
+            - db                        
+
+
+#  {
+#         "CreatedAt": "2022-01-22T08:37:21Z",
+#         "Driver": "local",
+#         "Labels": {},
+#         "Mountpoint": "/var/lib/docker/volumes/pgdbvol/_data",   VOLUME LOCATION 
+#         "Name": "pgdbvol",
+#         "Options": {},
+#         "Scope": "local"
+#     }
