--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,9 @@ services:
       - postgres-data:/var/lib/postgresql/data
   web:
     container_name: django
-    build: djangoproject/
+    build: .
     command: >
-      gunicorn djangoproject.wsgi:application --bind 0.0.0.0:8000 --workers=4
+      gunicorn core.wsgi:application --bind 0.0.0.0:8000 --workers=4
     env_file:
       - project.env
     expose:
