--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,6 +12,9 @@ server {
         proxy_set_header Host $host;
         proxy_redirect off;
     }
+    location /media/ {
+        alias /home/app/web/media;
+    }
 
     location /static/ {
     	alias /home/app/web/staticfiles/;
