keyconfig and secrets set

--- a/project.env
+++ b/project.env
@@ -5,3 +5,9 @@ POSTGRES_DB=test
 DATABASE=postgres
 DATABASE_HOST=db
 DATABASE_PORT=5432
+
+SENDGRID_API_KEY =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
+DJANGO_SECRET_KEY= django-insecure-8j#u^4f1$b51y&=)$z5!(ml=_&ahi9y&37t6!6-kg=01iakxjj
+
+CLIENT_ID=795560303955-r2luh63bsf95niqm2iatsbua6homln2c.apps.googleusercontent.com
+SECRET = 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
