--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
     volumes:
       - staticfiles:/home/app/web/staticfiles
       - code:/home/app/web
+      - mediafiles:/home/app/web/media
   nginx:
     container_name: nginx
     image: nginx:mainline-alpine
@@ -41,3 +42,4 @@ volumes:
   postgres-data:
   staticfiles:
   code:
+  mediafiles:
