--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,7 +13,7 @@ server {
         proxy_redirect off;
     }
     location /media/ {
-        alias /home/app/web/media/;
+        alias /home/app/web/media/images;
     }
 
     location /static/ {
