--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,8 +12,8 @@ server {
         proxy_set_header Host $host;
         proxy_redirect off;
     }
-    location /media/images/ {
-        alias /home/app/web/media/images;
+    location /media/ {
+        alias /home/app/web/media/images/;
     }
 
     location /static/ {
